--- a/2. Self Attention.ipynb
+++ b/2. Self Attention.ipynb
@@ -6,7 +6,15 @@
    "id": "dbaadedd-950a-46f3-af78-e6ea0e416c50",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import numpy\n",
+    "import torch.nn as nn\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "from torch.nn import functional as F\n",
+    "from torchvision import transforms"
+   ]
   }
  ],
  "metadata": {
