--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -433,7 +433,7 @@
    ],
    "source": [
     "# Setup directory paths to train and test images\n",
-    "train_directory = \"archive_/train/\"\n",
+    "train_directory = \"archive/train/\"\n",
     "train = pd.DataFrame()\n",
     "train['image'], train['label'] = load_dataset(train_directory)\n",
     "\n",
@@ -524,7 +524,7 @@
     }
    ],
    "source": [
-    "test_directory = \"archive_/test/\"\n",
+    "test_directory = \"archive/test/\"\n",
     "test = pd.DataFrame()\n",
     "test['image'], test['label'] = load_dataset(test_directory)\n",
     "\n",
@@ -614,7 +614,7 @@
     }
    ],
    "source": [
-    "val_directory = \"archive_/validation/\"\n",
+    "val_directory = \"archive/validation/\"\n",
     "val = pd.DataFrame()\n",
     "val['image'], val['label'] = load_dataset(val_directory)\n",
     "\n",
