Updated self attention

--- a/1. Introduction to PyTorch.ipynb
+++ b/1. Introduction to PyTorch.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2989480a-1aee-4dd5-89f1-22a7e986cc8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "efe45b4c-e4b6-4674-bbf5-6a5bdf6555af",
    "metadata": {
@@ -34,6 +42,7 @@
    "outputs": [],
    "source": [
     "class Rectangle:\n",
+    "    \n",
     "    def __init__(self):\n",
     "        self.length = 6\n",
     "        self.width = 4"
@@ -168,23 +177,32 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d064ab84-a8b2-434b-a73d-3b52e479900b",
+   "id": "d373be01-63f3-4c13-a8da-14adb22c5510",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = torch.tensor([2.,1.,10.])\n",
+    "model = Classification(3, 4, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d8588a8d-2edd-44a8-812b-94b7cf9b76a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([-0.9579], grad_fn=<ViewBackward0>)"
+       "tensor([-0.5622], grad_fn=<ViewBackward0>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = torch.tensor([2.,1.,10.])\n",
-    "model = Classification(3, 4, 1)\n",
     "model(data)"
    ]
   },
