--- a/2. Self Attention.ipynb
+++ b/2. Self Attention.ipynb
@@ -534,7 +534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now we have found a way to parameterize them such that we have weight separate"
+    "# Now we have found a way to parameterize them such that we have our weight separated"
    ]
   },
   {
