--- a/3. Vision Transformer.ipynb
+++ b/3. Vision Transformer.ipynb
@@ -3425,9 +3425,9 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "tensorflow_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tensorflow_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3439,7 +3439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
