--- a/3. Vision Transformer.ipynb
+++ b/3. Vision Transformer.ipynb
@@ -2,13 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -2300,19 +2293,19 @@
     "        query = self.query(query) # (B,T,hs)\n",
     "        \n",
     "        # compute attention scores (\"affinities\")\n",
-    "        wei = query @ key.transpose(-2,-1) # (B, T, hs) @ (B, hs, T) -> (B, T, T)\n",
+    "        weight = query @ key.transpose(-2,-1) # (B, T, hs) @ (B, hs, T) -> (B, T, T)\n",
     "        \n",
-    "        wei = wei * key.shape[-1]**-0.5 # Scale Factor\n",
+    "        weight = weight * key.shape[-1]**-0.5 # Scale Factor\n",
     "\n",
-    "        wei = wei.masked_fill(torch.tril(torch.ones(T,T)) == 0, float('-inf'))# (B, T, T)\n",
+    "        weight = weight.masked_fill(torch.tril(torch.ones(T,T)) == 0, float('-inf'))# (B, T, T)\n",
     "        \n",
-    "        wei = F.softmax(wei, dim=-1) # (B, T, T)\n",
+    "        weight = F.softmax(weight, dim=-1) # (B, T, T)\n",
     "        \n",
-    "        wei = self.dropout(wei)\n",
+    "        weight = self.dropout(weight)\n",
     "        \n",
     "        # perform the weighted aggregation of the values\n",
     "        value = self.value(value) # (B,T,hs)\n",
-    "        out = wei @ value # (B, T, T) @ (B, T, hs) -> (B, T, hs)\n",
+    "        out = weight @ value # (B, T, T) @ (B, T, hs) -> (B, T, hs)\n",
     "        \n",
     "        return out"
    ]
