--- a/3. Vision Transformer.ipynb
+++ b/3. Vision Transformer.ipynb
@@ -2400,7 +2400,7 @@
    ],
    "source": [
     "# Setup directory paths to train and test images\n",
-    "train_directory = \"src/archive/train/\"\n",
+    "train_directory = \"src/vit_model/archive/train/\"\n",
     "train = pd.DataFrame()\n",
     "train['image'], train['label'] = load_dataset(train_directory)\n",
     "\n",
@@ -2492,7 +2492,7 @@
     }
    ],
    "source": [
-    "test_directory = \"src/archive/test/\"\n",
+    "test_directory = \"src/vit_model/archive/test/\"\n",
     "test = pd.DataFrame()\n",
     "test['image'], test['label'] = load_dataset(test_directory)\n",
     "\n",
@@ -2583,7 +2583,7 @@
     }
    ],
    "source": [
-    "val_directory = \"src/archive/validation/\"\n",
+    "val_directory = \"src/vit_model/archive/validation/\"\n",
     "val = pd.DataFrame()\n",
     "val['image'], val['label'] = load_dataset(val_directory)\n",
     "\n",
