Added image test

--- a/1. Introduction to PyTorch.ipynb
+++ b/1. Introduction to PyTorch.ipynb
@@ -692,7 +692,7 @@
    "outputs": [],
    "source": [
     "# only saving the state_dict() which only saves the models learned parameters\n",
-    "torch.save(obj=model.state_dict(), f=\"model/linear_model\")"
+    "torch.save(obj=model.state_dict(), f=\"linear_model\")"
    ]
   },
   {
